--- a/beep_test.html
+++ b/beep_test.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="ps3xploit_v30.js"></script>
+<script src="ps3xploit_v302.js"></script>
 <meta charset="UTF-8"> 
-<title>PS3Xploit Tools v3.0.1 - Beep Test</title>
+<title>PS3Xploit Tools v3.0.2 - Beep Test</title>
 <script>
 function initROP(init)
 {
@@ -111,17 +111,14 @@ function triggerX()
 </head>
 	<body id="bodyId" style="background-color:#FFD097">
 	<div id="headerId" style="color:#CC2010">
-	<h1>PS3Xploit Tools v3.0.1 - Beep Test</h1>
+	<h1>PS3Xploit Tools v3.0.2 - Beep Test</h1>
 	<h2><span style="color:#000000">Courtesy of PS3Xploit Team</span></h2><b>esc0rtd3w </b><span style="color:#000000;"> (Debugging & Testing) <b>|</b> </span><b>habib </b><span style="color:#000000"> (Reverse Engineering & Debugging) <b>|</b> </span><b>bguerville </b><span style="color:#000000"> (ROP, Javascript & Debugging)</span><hr>
 		<span style="color:#000000">Many thanks to xerpi for porting the memory leak exploit to ps3, zecoxao & Joonie for their early & renewed support, mysis for documenting vsh/lv2, SSL for his regular & precious advice, kakaroto for the PS3 IDA tools, naherwert for scetool, Rebug Team for producing/updating the only CFW adequate to develop this work & Cobra team for sharing their CobraUSB source, the psdevwiki team of course, STLcardsWS for his long standing contribution & ever constant support.<br>We also wish to thank all the ps3 community hackers/devs, past & present, who directly or indirectly helped us put this project together, you know who you are...</span><hr>
-	<h3>Supports CEX/DEX 4.81 - 4.84 OFW/CFW/HFW Firmware</h3>
+	<h3>Supports CEX/DEX 4.81 - 4.85 OFW/CFW/HFW Firmware</h3>
 	<p><span style="color:#000000">More details & news on</span> <a href="http://www.psx-place.com/forums/ps3xploit">http://www.psx-place.com</a></p>
 	<hr></div>
 	
-	<p><span style="color:#000000">Root Path </span>
-	<select id="combofilePath" name="fPath" size="1" onChange="selectfilePath()">
-	<option id="usb_0" selected="selected" value="/dev_usb000">/dev_usb000</option><option id="usb_1" value="/dev_usb001">/dev_usb001</option><option id="usb_6" value="/dev_usb006">/dev_usb006</option><option id="xploit_extras" value="/dev_hdd0/game/PS3XPLOIT/USRDIR/extras">/dev_hdd0/game/PS3XPLOIT/USRDIR/extras</option><option id="han_toolbox" value="/dev_hdd0/game/HANTOOLBX/USRDIR/files/">/dev_hdd0/game/HANTOOLBX/USRDIR/files/</option>
-	</select> | Auto-Close Browser <input type="checkbox" id="auto_close" name="aclose" checked="checked" onclick="autoclose();"/> | Auto-Reboot <input type="checkbox" id="auto_reboot" name="areboot" onclick="autoreboot();"/>
+	<p>Auto-Close Browser <input type="checkbox" id="auto_close" name="aclose" checked="checked" onclick="autoclose();"/> | Auto-Reboot <input type="checkbox" id="auto_reboot" name="areboot" onclick="autoreboot();"/>
 	<span id="dex_txt" style="visibility:hidden"> | DEX mode<input type="checkbox" id="dex" name="DEX" disabled="" onclick="dex();"/></span></p>
 	<p><button id="btnROP" type="button" onclick="initROP(true);" autofocus>Initialize Beep Test</button> | 
 	<button id="btnTrigger" disabled="" type="button" onclick="triggerX();">Trigger Buzzer</button><span id="reset" style="visibility:hidden"> | <button id="btnReset" type="button" onclick="disable_trigger();">Reset</button></span></p>
