--- a/beep_test.html
+++ b/beep_test.html
@@ -117,7 +117,7 @@ function triggerX()
 	<h3>Supports CEX/DEX 4.81 - 4.82 OFW/CFW Firmware</h3>
 	<h3>Supports DEX 4.84 OFW/CFW Firmware</h3>
 	<h3>Supports CEX 4.84 - 4.88 HFW Firmware</h3>
-	<p><span style="color:#000000">More details & news on</span> <a href="http://www.psx-place.com/forums/ps3xploit">http://www.psx-place.com</a><br><br><span style="color:#000000">PS3Xploit Team Donations:</span> <a href="https://www.paypal.me/ps3xploit">https://www.paypal.me/nopsn</a></p>
+	<p><span style="color:#000000">More details & news on</span> <a href="http://www.psx-place.com/forums/ps3xploit">http://www.psx-place.com</a><br><br><span style="color:#000000">PS3Xploit Team Donations:</span> <a href="https://www.paypal.me/nopsn">https://www.paypal.me/nopsn</a></p>
 	<hr></div>
 	<p>Auto-Close Browser <input type="checkbox" id="auto_close" name="aclose" checked="checked" onclick="autoclose();"/> | Auto-Reboot <input type="checkbox" id="auto_reboot" name="areboot" onclick="autoreboot();"/>
 	<span id="dex_txt" style="visibility:hidden"> | DEX mode<input type="checkbox" id="dex" name="DEX" disabled="" onclick="dex();"/></span></p>
